# NavData

./: Cargo.toml  Dockerfile  README.md  config.toml  navdata_config.yaml
.github/workflows/: docker-publish.yml
api-spec/: api.yaml
src/: main.rs
src/app/: db.rs  messages.rs  mod.rs
src/app/config/: mod.rs
src/app/db/: mod.rs  mongodb.rs  sqlite.rs
src/app/navdata/: airport.rs  mod.rs  model.rs  navaid.rs
src/app/routes/: navaid.rs
src/app/security/: error.rs  mod.rs  simple_token.rs
