[package]
name = "nav_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.13.0"
actix = "0.13.1"
actix-cors = "0.7"
actix-web = "4.4.1"
env_logger = "0.10.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
csv = "1.3.0"
sqlite = "0.32.0"
actix-rt = "2.9.0"
tokio = "1.35.1"
